[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Bora Kirca <kirca.bora@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

